--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
         with:
           node-version: 14.x
 
-      - name: Setup
-        run: npm ci
-
       - name: Test frontend
         run: |
-          ls
-#          npm test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+          cd frontend
+          npm ci
+          npm install
+          npm run test:ci
+          npm run lint
